# fastsockets

./: pyproject.toml
examples/auth/: __main__.py  get_redis.py  redis.py  session.py
examples/auth/endpoints/: auth.py
examples/auth/models/: login.py  register.py
examples/simple/: __main__.py
examples/simple/handlers/: ping.py
examples/simple_class_based/: __main__.py
examples/simple_class_based/handlers/: ping.py
examples/simple_class_based/models/: __init__.py
examples/simple_decorator_based/: __main__.py
examples/simple_decorator_based/handlers/: ping.py
examples/websockets_auth/: __main__.py  docker-compose.yml  get_redis.py  session.py
examples/websockets_auth/db/: __init__.py
examples/websockets_auth/dependencies/: not_authenticated.py
examples/websockets_auth/endpoints/: auth.py  exceptions.py
examples/websockets_auth/handlers/: ping.py
examples/websockets_auth/models/: login.py  register.py
fastsockets/: HandlersExecutor.py  __init__.py  create_handler.py  get_executor_provider.py  get_handler_from_module.py  load_handlers.py
fastsockets/auth/: Session.py  SessionProvider.py
fastsockets/exceptions/: __init__.py
fastsockets/handlers/: ActionHandler.py  BaseActionHandler.py  Executor.py  Handlers.py  HandlersExecutorsManager.py  __init__.py  handler.py
fastsockets/handlers/auth/: AuthHandlers.py  SessionExecutor.py
fastsockets/types/: BaseMessage.py
package/: __main__.py  load_handlers.py
package/handlers/: __init__.py  register.py
package/models/: __init__.py
package/types/: Message.py
(+9 files in other folders)
