[tool.poetry]
name = "websocket-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "websocket_test"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
websockets = "^11.0.1"
argon2-cffi = "^21.3.0"
redis = {extras = ["hiredis"], version = "^4.5.4"}
itsdangerous = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
